ossm/sdgdemo-destin-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: employee
spec:
  host: employee
  subsets:
  - name: v1
    labels:
      version: v1
