ossm/sdgsmdemo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: employee-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "employee.apps.cluster-3aa4.sandbox1722.opentlc.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee
spec:
  hosts:
  - "employee.apps.cluster-3aa4.sandbox1722.opentlc.com"
  gateways:
  - employee-gateway
  http:
  - match:
    - uri:
        prefix: /v1/api/sdg
    route:
    - destination:
        host: springboot-demo
        port:
          number: 8080
